@@ -2243,6 +2243,9 @@
     <ClCompile Include="CCgMaterialRenderer.cpp">
       <Filter>Irrlicht\video</Filter>
     </ClCompile>
+    <ClCompile Include="leakHunter.cpp">
+      <Filter>Irrlicht\irr</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Irrlicht.rc" />
