@@ -123,6 +123,9 @@
     <ClInclude Include="..\..\include\irrlicht.h">
       <Filter>include</Filter>
     </ClInclude>
+	<ClInclude Include="..\..\include\leakHunter.h">
+      <Filter>include</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\include\IrrlichtDevice.h">
       <Filter>include</Filter>
     </ClInclude>
@@ -1806,6 +1809,9 @@
       <Filter>Irrlicht\irr</Filter>
     </ClCompile>
     <ClCompile Include="os.cpp">
+      <Filter>Irrlicht\irr</Filter>
+    </ClCompile>
+	<ClCompile Include="leakHunter.cpp">
       <Filter>Irrlicht\irr</Filter>
     </ClCompile>
     <ClCompile Include="lzma\LzmaDec.c">
