@@ -350,6 +350,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\include\leakHunter.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\include\IrrlichtDevice.h"
 				>
 			</File>
@@ -2552,6 +2556,10 @@
 			</File>
 			<File
 				RelativePath="os.cpp"
+				>
+			</File>
+			<File
+				RelativePath="leakHunter.cpp"
 				>
 			</File>
 			<File
